REGRESSION (r207669): FileMaker Pro Help pages do not render correctly https://bugs.webkit.org/show_bug.cgi?id=170402 <rdar://problem/31004344>

Reviewed by Simon Fraser.

Source/WebCore:

If a new stylesheet load is started from the load event the document.styleSheets does not
always reflect the already loaded stylesheets.

Test: fast/css/document-stylesheets-dynamic.html

* style/StyleScope.cpp:
(WebCore::Style::Scope::updateActiveStyleSheets):

    Remove an old optimization where we would not update active stylesheets if there were pending
    (head) stylesheet loads and they had not been updated already.
    This is probably not a valuable optimization anymore with the new lazy stylesheet update strategy.

* style/StyleScope.h:

LayoutTests:

* fast/css/document-stylesheets-dynamic-expected.html: Added.
* fast/css/document-stylesheets-dynamic.html: Added.


Canonical link: https://commits.webkit.org/187331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214830 268f45cc-cd09-0410-ab3c-d52691b4dbfc